# tali

./: NEWS  configure.ac
help/: Makefile.am
help/C/: game-settings.page  index.page  keyboard-shortcuts.page  play-game.page  players-setting.page  scores.page  start-game.page
po/: eu.po  sl.po
