@YELP_HELP_RULES@
HELP_ID = tali

HELP_MEDIA = \
	figures/logo32.png \
	figures/logo.png

HELP_FILES = \
        legal.xml \
	index.page \
	play-game.page \
	setting.page \
	game-settings.page \
	scores.page \
	keyboard-shortcuts.page

HELP_LINGUAS = ca cs da de el en_GB es eu fr gl it oc pt_BR ru sl sr sr@latin sv zh_CN

-include $(top_srcdir)/git.mk
